2006-07-24  Kouichirou Eto  <2006 eto.com>

	* Reformat Copyright notice.

	* webdavhandler.rb: Deleted.

	* test-typekey.rb: Splited from typekey.rb

2006-07-22  Kouichirou Eto  <2006 eto.com>

	* qwikWeb 0.8.3 is released.
	See NEWS for the Changes.

2006-07-22  Kouichirou Eto  <2006 eto.com>

	* act-graphviz.rb: Deleted.
	* act-report.rb, act-secdb.rb, act-summary.rb, act-tagsearch.rb: Ditto.
	
2006-07-21  Kouichirou Eto  <2006 eto.com>

	* act-album.rb: Deleted.
	* act-takahashi.rb: Ditto.

2006-07-20  Kouichirou Eto  <2006 eto.com>

	* common-surface.rb: Add RSS Auto Discovery.

2006-07-19  Kouichirou Eto  <2006 eto.com>

	* dev-replace.rb: Update.

	* dev-add-copyright.rb: New file.

	* Add Copyright Notice to all .rb files.

	* act-charts.rb: Removed.

	* util-tail.rb: Removed.

2006-07-05  Kouichirou Eto  <2006 eto.com>

	* wabisabi-diff.rb: Set timout for diff.
	http://jvn.jp/jp/JVN%2398836916/index.html

2006-07-04  Kouichirou Eto  <2006 eto.com>

	* wabisabi-diff.rb: Do not use module Qwik.

2006-06-23  Kouichirou Eto  <2006 eto.com>

	* group-db.rb (get): Bug fix. Delete e on rescue.

2006-06-22  Kouichirou Eto  <2006 eto.com>

	* act-wema.rb (ext_wema): Debug for non-exist wema.

2006-06-20  Kouichirou Eto  <2006 eto.com>

	* response.rb (get_mimetypes): New method.
	* response.rb (set_content_type): New method.
	It can handle UPCASE extention.
	Releated files are changed.

2006-05-24  Kouichirou Eto  <2006 eto.com>

	* site-search.rb: Add obfuscate mailaddress.

	* Refactoring: Rename util-* files.

2006-05-21  Kouichirou Eto  <2006 eto.com>

	* act-povray.rb: Add open3 support.

2006-04-30  Kouichirou Eto  <2006 eto.com>

	* act-povray.rb: New plugin to render 3D CG.

	* act-textarea.rb: Refactoring.

2006-04-20  Kouichirou Eto  <2006 eto.com>

	* act-basic.rb: New plugin. plugin_list

	* act-basic.rb: New plugin. my_group

	* act-plan.rb: Use start_time instead of Time.now

	* farm.rb: Refactoring.

2006-04-17  Kouichirou Eto  <2006 eto.com>
