@@ -1,3 +1,7 @@
+2006-07-27  Kouichirou Eto  <2006 eto.com>
+
+	* Add Copyright notice.
+
 2006-07-24  Kouichirou Eto  <2006 eto.com>
 
 	* Reformat Copyright notice.
